Second_version/deploymet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triton-server
  labels:
    app: triton-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: triton-server
  template:
    metadata:
      labels:
        app: triton-server
    spec:
      containers:
      - name: triton-server
        image: nvcr.io/nvidia/tritonserver:23.10-py3
        command: ["/bin/sh", "-c"]
        args:
          - |
            [...]
        ports:
        - containerPort: 8000
          name: http
        - containerPort: 8001
          name: grpc
        - containerPort: 8002
          name: metrics
        resources:
          limits:
            memory: 8Gi
            cpu: 8
          requests:
            memory: 8Gi
            cpu: 2 
        volumeMounts:
        - mountPath: /models
          name: models
      volumes:
      - name: models
        persistentVolumeClaim:
          claimName: triton-model-pvc
